--- a/services/recognition/README
+++ b/services/recognition/README
@@ -1,1 +1,5 @@
 here comes the recognition microservice
+In order to create the container run:
+    $ sudo docker image build -t <container_name> .
+In order to run the image 
+    § sudo docker run -it -p 8000:8000 --device=/dev/vcsm     --device=/dev/vchiq test /bin/bash
